--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body 
 {
-    background-color: #FFFFFF;
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
     font-size: 15px;
     min-width: 320px;
     line-height: 1.5;
     padding: 0;
     margin: 0;
+    background-color: #f4d0fb;
 }
 
 /*Global */
@@ -18,7 +18,7 @@ form {
 .form-container 
 {
      margin-top:40px; 
-     margin-bottom: 80px;
+     margin-bottom: 80px;  
 }
 
 .container
@@ -26,7 +26,6 @@ form {
 	width: 80%;
 	margin: auto;
 	overflow: hidden;
-
 }
 
 ul
@@ -65,7 +64,7 @@ header
 	background: #9012B3;
 	color: #FFFFFF;
 	padding-top: 30px;
-	min-height: 50px;
+	min-height: 70px;
 	border-bottom: 7px solid #E07AFF;
 }
 
@@ -90,7 +89,6 @@ header li
 	color: #FFFFFF;
 	font-size: 18px;
 	font-family: 'Trebuchet MS';
-	
 }
 
 header #logo
@@ -105,7 +103,6 @@ header #logo h1
 	margin: 0;
 	margin-left:136px;
 	font-family: 'Trebuchet MS';
-
 }
 
 header nav
@@ -122,7 +119,7 @@ header .nav-btn
     height: 40px;
     width:  86px;
     margin-top: 0px;
-    margin-bottom: 16px;
+    margin-bottom: 50px;
     font-family: 'Trebuchet MS';
     border: 0px solid;
     font-size: 18px;
@@ -134,6 +131,64 @@ header .nav-btn
  	color: #FFE521;
  	font-weight: bold;
  }
+
+ 
+/* Links inside the navbar */
+.navbar a 
+{
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-top: 5px;
+}
+
+/* The dropdown container */
+.submenu 
+{
+  float: left;
+  overflow: hidden;
+}
+
+.submenu-drop
+ {
+  font-size: 18px; 
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* submenu content (hidden by default) */
+.submenu-content 
+{
+  display: none;
+  position: absolute;
+  background-color: #9012B3;
+  min-width: 160px;
+  
+ }
+
+/* Links inside the submenu */
+.submenu-content a 
+{
+  float: none;
+  color: #FFFFFF;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.submenu:hover .submenu-content
+{
+  display: block;
+}
 
 /* landing */
 #landing-page
@@ -170,7 +225,7 @@ header .nav-btn
 {	
 	background-color: #9012B3 ;
 	color: #FFFFFF;
-	padding-botttopom: 100px;
+	padding-top: 100px;
 	padding-bottom: 100px;
 }
 
@@ -181,7 +236,7 @@ header .nav-btn
 	background-color: #9012B3 ;
 	color: #FFE521;
 	font-size: 2.5em;
-	padding-top: 50px;
+	margin-top: 5px;
 }
 
 #testimonials h3
@@ -189,7 +244,6 @@ header .nav-btn
 	
 	color: #FFE521;
 	font-size: 1.5em;
-	
 }
 
 .customer
@@ -198,15 +252,12 @@ header .nav-btn
 	width: 30%;
 	padding: 10px;
 	text-align: center;	
-
 }
 
 .customer img
 {
 	margin-top: 20px;	
 }
-
-
 
 footer
 {
@@ -219,16 +270,17 @@ footer
   	left: 0;
   	bottom: 0;
   	width: 100%;
-  	
   	border-top: 7px solid #E07AFF;
 }
 
-.page_title {
+.page_title 
+{
     font-weight: bold;
     color: #FFE521;
 }
 
-.input {
+.input 
+{
   height: 30px;
   width: 280px;
   padding: 5px;
@@ -260,8 +312,7 @@ footer
   	background-image: url(../img/landing.jpg) no repeat;
   }
 
-
-  .centered_div
+.centered_div
   {
   	margin:  0 auto;
   	background-color: #9012B3;
@@ -271,28 +322,34 @@ footer
    	text-align: center;
  }
 
+ .centered_div p
+ {
+ 	color: #FFFFFF;
+ }
+
 /*Loan Application*/
 .loan-form-container
-  {
+{
   	margin:  0 auto ;
   	background-color: #9012B3;
     border-radius: 10px;
     max-width: 55%;
     padding: 1px;
-     margin-top:40px; 
-     margin-bottom: 80px;
-  }
+    margin-top:40px; 
+    margin-bottom: 80px;
+ }
 
-  .loan-submit
-  {
+.loan-submit
+{
   	margin-left: 220px;
   	margin-bottom: 30px;
-  }
+  	text-transform: uppercase;
+}
 
 .input-control
 {
 	width: 35% !important;
-	
+	margin-left: 40px;
 }
 
 .label-control
@@ -301,17 +358,17 @@ footer
     display:inline-block;
 	color: #FFFFFF;
 	padding-left: 10px;
-	margin-left: 100px;
-
+	margin-left: 50px;
+	text-align: right;
 }
 
 .dropdown-control
 {
 	width: 36.5% !important;
-	margin-left: 50px;
+	margin-left: 40px;
 	height: 40px;
   	padding: 5px;
-  	margin: 3px;
+  	/*margin: 3px;*/
   	border: 1px solid #c0c0c0;
   	border-radius: 4px;
 }
@@ -327,6 +384,158 @@ footer
 	margin-left: 110px;
 	color: #FFFFFF;
 	display:inline-block;
+}
+
+/*loan History*/
+.show-loan-info
+{
+	width: 90%;
+	margin: auto;
+	overflow: hidden;
+	margin-left: 85px;
+}
+
+.personal-info
+{
+	background-color: #ffccff; 
+	width: 18%;
+	height: 120px;
+	color:	#9012B3;
+	float: left;
+	padding: 10px;
+	text-align: center;
+}
+
+.personal-info h3
+{
+	font-size: 22px;
+	text-align: center;
+	padding: 0;
+}
+
+.loan-amount
+{
+	background-color: #E6D3C9; 
+	width: 18%;
+	height: 120px;
+	color:	#851081;
+	float: left;
+	padding: 10px;
+	text-align: center;	
+}
+
+.loan-amount h3
+{
+	font-size: 22px;
+	text-align: center;
+	padding: 0;
+}
+
+.loan-balance
+{
+	background-color: #ffccff; 
+	width: 18%;
+	height: 120px;
+	color:	#9012B3;
+	float: left;
+	padding: 10px;
+}
+
+.loan-balance h3
+{
+	font-size: 22px;
+	text-align: center;
+	padding: 0;
+}
+
+.loan-balance p
+{
+	
+	text-align: center;
+	
+}
+
+.loan-repayment
+{
+	background-color: #E6D3C9; 
+	width: 18%;
+	height: 120px;
+	color:	#851081;
+	text-align: center;
+	float: left;
+	padding: 10px;
+}
+
+.loan-repayment h3
+{
+	font-size: 22px;
+	text-align: center;
+	padding: 0;
+}
+
+.rate
+{
+	background-color: #ffccff; 
+	width: 18%;
+	height: 120px;
+	color:	#9012B3;
+	text-align: center;
+	float: left;
+	padding: 10px;
+}
+
+.rate h3
+{
+	font-size: 22px;
+	text-align: center;
+	padding: 0;
+}
+
+/*tables*/
+.loan-info-table
+{	margin-top: 50PX;
+	margin-left: 80px;
+	border-collapse: collapse;
+}
+
+.loan-info-table, td, th 
+{
+  padding: 15px;
+}
+
+.loan-info-table a 
+{
+  color: #9012B3;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.loan-info-table a:hover 
+{
+  color: #A52A2A;
+  
+}
+
+tr:nth-child(even) 
+{
+	background-color: #ffccff;
+}
+
+th 
+{
+  text-align: left;
+  color: #FFE521;
+  background-color: #9012B3;
+}
+
+td 
+{
+  text-align: center;
+}
+
+.loan-details
+{
+	overflow-x:auto;
 }
 
 /*Media Queries*/
@@ -383,3 +592,4 @@ footer
 		font-size: 25px;
 	}
 }
+
