--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ form {
 .container
 {
 	width: 80%;
-	margin: auto;
+	margin-bottom: 20px;
 	overflow: hidden;
 }
 
@@ -81,20 +81,12 @@ header a:hover
 	cursor: pointer;
 }
 
-header li
-{ 
-	float: left;
-	display: inline;
-	padding: 0px 20px 0 20px;
-	color: #FFFFFF;
-	font-size: 18px;
-	font-family: 'Trebuchet MS';
-}
+
 
 header #logo
 {
 	float: left;
-	margin-top: 0px;
+	margin-top: 5px;
 	padding-top: 0px;
 }
 
@@ -109,6 +101,8 @@ header nav
 {
 	float: right;
 	margin-top: 5px;
+	padding-top:0;
+	overflow: hidden;
 }
 
 header .nav-btn
@@ -119,7 +113,7 @@ header .nav-btn
     height: 40px;
     width:  86px;
     margin-top: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     font-family: 'Trebuchet MS';
     border: 0px solid;
     font-size: 18px;
@@ -138,12 +132,23 @@ header .nav-btn
 {
   float: left;
   font-size: 16px;
-  color: white;
+  display: inline;
+  color: #FFFFFF;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   margin-top: 5px;
 }
+
+/*header li
+{ 
+	float: left;
+	display: inline;
+	padding: 0px 20px 0 20px;
+	color: #FFFFFF;
+	font-size: 18px;
+	font-family: 'Trebuchet MS';
+}*/
 
 /* The dropdown container */
 .submenu 
@@ -193,7 +198,7 @@ header .nav-btn
 /* landing */
 #landing-page
 {
-	background-image: url("../img/landing.jpg");
+	background-image: url("../img/landing.jpg");*/
  	background-repeat: no-repeat;
  	background-position: center; 
  	width:100%;
@@ -202,6 +207,7 @@ header .nav-btn
 	color: #FFE521;
 	margin-bottom: 0;
 	padding: 20px;
+	overflow: hidden;
 }
 
 #landing-page h1
@@ -225,8 +231,9 @@ header .nav-btn
 {	
 	background-color: #9012B3 ;
 	color: #FFFFFF;
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 70px;
+	padding-bottom: 60px;
+
 }
 
 
@@ -305,6 +312,7 @@ footer
     border: 0px solid;
     font-size: 1em;
     cursor: pointer;
+    text-transform: uppercase;;
   }
 
  .create
@@ -540,56 +548,112 @@ td
 
 /*Media Queries*/
 
-@media (max-width: 768px)
-{
-	header #logo,
-	header nav,
-	header nav li
 
+@media only screen and (max-width : 767px), (min-device-width: 768px) and (max-device-width: 1024px)
+{	
+	header
+	{
+		min-height: 200px;
+	}
+	.customer, 
 	{
 		float: none;
 		text-align: center;
 		width: 100%;
 	}
 
-	.landing-page h1
+	header #logo h1
 	{
-		margin-top: 5px;
-		font-size: 40px;
-	}
-}
-
-@media (max-width: 360px)
-{
-	
-	header nav,
-	header nav li a
-	#testimonials .customer
-	.centered_div
-	.loan-form-container
-	{
+		margin-left: 50px;
 		float: none;
-		text-align: center;
 		width: 100%;
+		text-align: center;
 	}
 
-	header #logo
-	{
-		margin-left: 0px;
-		float: none;
-		text-align: center;
-		width: 100%;
-	}
 	#landing-page h1
 	{
-		margin-top: 5px;
+		margin-top: 0px;
 		padding-top: 0px;
-		font-size: 40px;
+		font-size: 35px;
+	}c=
 
+	#landing-page p
+	{
+		margin-top: 0px;
+		padding-top: 0px;
+		font-size: 20px;
+		margin-bottom: 20px;
 	}
+
+	.navbar
+	{
+		float: none
+		width: 100%;
+		text-align: center;
+	}
+
+	nav a
+	{
+		text-align: center;
+		cursor: pointer;
+	}
+
 	#testimonials h2
 	{
 		font-size: 25px;
+		margin-top: 0px;
+		padding-top: 0;
+		
 	}
+
+	.centered_div
+	{
+		float: none;
+		text-align: center;
+		width: 90%;
+	}
+
+	.input,  
+	{
+		float: none;
+		text-align: center;
+		width: 83%;
+	}
+
+	.submit
+	{
+		float: none;
+		text-align: center;
+		width: 83%;
+	}
+
+	.show-loan-info
+	{
+		float: none;
+		text-align: center;
+		width: 100%;
+	}
+
+	.loan-details
+	{
+		overflow-x:auto;
+	}
+
+	table, thead, tbody, th, td, tr 
+	{ 
+		display: block; 
+	}
+
+	thead tr 
+	{ 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+
 }
+
+
+
 
