--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -6,7 +6,7 @@ body
     line-height: 1.5;
     padding: 0;
     margin: 0;
-    background-color: #f4d0fb;
+    background-color: #FFFFFF;
 }
 
 /*Global */
@@ -61,11 +61,11 @@ a:hover
 
 header
 {
-	background: #9012B3;
+	background: #363377;
 	color: #FFFFFF;
 	padding-top: 30px;
 	min-height: 70px;
-	border-bottom: 7px solid #E07AFF;
+	border-bottom: 7px solid #827FB2;
 }
 
 header a
@@ -109,7 +109,7 @@ header .nav-btn
 {
 	background-color: #FFE521;
 	border-radius: 4px;
-    color: #9012B3;
+    color: #363377;
     height: 40px;
     width:  86px;
     margin-top: 0px;
@@ -118,6 +118,11 @@ header .nav-btn
     border: 0px solid;
     font-size: 18px;
     cursor: pointer;
+ }
+
+.nav-button a:hover
+ {
+ 	color: #FFE521;
  }
 
  header .highlight, header .active
@@ -174,7 +179,7 @@ header .nav-btn
 {
   display: none;
   position: absolute;
-  background-color: #9012B3;
+  background-color: #363377;
   min-width: 160px;
   
  }
@@ -229,7 +234,7 @@ header .nav-btn
 /*testimonials */
 #testimonials 
 {	
-	background-color: #9012B3 ;
+	background-color: #363377 ;
 	color: #FFFFFF;
 	padding-top: 70px;
 	padding-bottom: 60px;
@@ -240,7 +245,7 @@ header .nav-btn
 #testimonials h2
 {
 	text-align: center;
-	background-color: #9012B3 ;
+	background-color: #363377 ;
 	color: #FFE521;
 	font-size: 2.5em;
 	margin-top: 5px;
@@ -271,13 +276,13 @@ footer
 	padding: 3px;
 	margin-top: 3px;
 	color: #FFFFFF;
-	background-color: #9012B3;
+	background-color: #363377;
 	text-align: center;
 	position: fixed;
   	left: 0;
   	bottom: 0;
   	width: 100%;
-  	border-top: 7px solid #E07AFF;
+  	border-top: 7px solid #827FB2;
 }
 
 .page_title 
@@ -302,7 +307,7 @@ footer
 {
     background-color: #FFE521;
 	border-radius: 4px;
-    color: #9012B3;
+    color: #363377;
     height: 40px;
     width:  290px;
     margin-top: 0px;
@@ -315,6 +320,13 @@ footer
     text-transform: uppercase;;
   }
 
+  .submit:hover
+  {
+  	color: black;
+
+    background-color: #827FB2;
+  }
+
  .create
   {
   	background-image: url(../img/landing.jpg) no repeat;
@@ -323,7 +335,7 @@ footer
 .centered_div
   {
   	margin:  0 auto;
-  	background-color: #9012B3;
+  	background-color: #363377;
     border-radius: 10px;
     max-width: 450px;
     padding: 1px;
@@ -339,7 +351,7 @@ footer
 .loan-form-container
 {
   	margin:  0 auto ;
-  	background-color: #9012B3;
+  	background-color: #363377;
     border-radius: 10px;
     max-width: 55%;
     padding: 1px;
