--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -74,7 +74,7 @@ header a
 	color: #FFFFFF;
 }
 
-header a:hover
+header nav a:hover
 {
 	color: #64B058;
 	text-decoration: underline;
@@ -97,6 +97,11 @@ header #logo h1
 	font-family: 'Trebuchet MS';
 }
 
+header #logo a:hover
+{
+	text-decoration: none; 
+}
+
 header nav
 {
 	float: right;
@@ -108,7 +113,7 @@ header nav
 header .nav-btn
 {
 	background-color: #64B058;
-	border-radius: 4px;
+	border-radius: 20px;
     color: #363377;
     height: 40px;
     width:  86px;
@@ -220,22 +225,22 @@ header .nav-btn
 	margin-top: 100px;
 	font-size: 55px;
 	margin-bottom: 10px;
-	text-shadow: 4px 4px 6px #000000;
+	/*text-shadow: 4px 4px 6px #000000;*/
 }
 
 
 #landing-page p
 {
 	font-size: 25px;
-	text-shadow: 10px 10px 20px #000000;
+	/*text-shadow: 10px 10px 20px #000000;*/
 	color: #FFFFFF
 }
 
 /*testimonials */
 #testimonials 
 {	
-	background-color: #363377 ;
-	color: #FFFFFF;
+	/*background-color: #363377 ;*/
+	color: #000000;
 	padding-top: 70px;
 	padding-bottom: 60px;
 
@@ -245,7 +250,7 @@ header .nav-btn
 #testimonials h2
 {
 	text-align: center;
-	background-color: #363377 ;
+	/*background-color: #363377 ;*/
 	color: #64B058;
 	font-size: 2.5em;
 	margin-top: 5px;
