--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -64,7 +64,8 @@ header
 	background: #363377;
 	color: #FFFFFF;
 	padding-top: 30px;
-	min-height: 70px;
+	 min-height: 70px; 
+	/* height: 100vh; */
 	border-bottom: 7px solid #827FB2;
 }
 
@@ -243,6 +244,7 @@ header .nav-btn
 	color: #000000;
 	padding-top: 70px;
 	padding-bottom: 60px;
+	/* height: 100vh; */
 
 }
 
@@ -572,7 +574,7 @@ td
 	{
 		min-height: 200px;
 	}
-	.customer, 
+	.customer
 	{
 		float: none;
 		text-align: center;
