--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -20,18 +20,18 @@ body {
 
 .menu-icon 
 {
-  position: fixed; /* Needs to stay visible for mobile scrolling */
+  position: fixed; 
   display: flex;
   top: 5px;
-  left: 10px;
+  left: 10px; 
   align-items: center;
   justify-content: center;
-  background-color: #E07AFF;
+  background-color: #7689A9;
   border-radius: 50%;
   z-index: 1;
   cursor: pointer;
   padding: 12px;
-  color: #A52A2A
+  color: #FFFFFF
 }
 
 .header 
@@ -41,7 +41,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 0 16px;
-  background-color: #9012B3;
+  background-color: #363377;
 }
 
 .header-search 
@@ -61,9 +61,13 @@ body {
   transform: translateX(-245px);
   transition: all .6s ease-in-out;
   z-index: 2; /* Needs to sit above the hamburger menu icon */
-  background-color: #9012B3;
+  background-color: #363377;
 }
 
+.sidenav a{
+  color: #FFFFFF;
+  text-decoration: none;
+}
 
 .sidenav-brand
 {
@@ -76,8 +80,8 @@ body {
 	display: flex;
     align-items: center;
     min-height: 90px;
-    background-color: #E07AFF;
-    color: #A52A2A;
+    background-color: #7689A9;
+    color: #FFFFFF;
 }
 
 .sidenav-profile-picture
@@ -98,7 +102,7 @@ body {
 
 .highlight
 {
- 	color: #FFE521;
+ 	color: #64B058;
  	font-weight: bold;
 }
 
@@ -133,15 +137,15 @@ body {
 
 .sidenav-menu-item:hover 
 {
-  background-color: #E07AFF;
+  background-color: #7689A9;
   cursor: pointer;
 }
 
 .main 
 {
   grid-area: main;
-  background-color: #f4d0fb;
-  color: #A52A2A;
+  background-color: #FFFFFF;
+  color: #FFFFFF;
   font-weight: bold;
 }
 
@@ -152,8 +156,8 @@ body {
   margin: 20px;
   padding: 20px;
   height: 150px;
-  background-color: #E07AFF;
-  color: #A52A2A;
+  background-color: #7689A9;
+  color: #FFFFFF;
   font-weight: bold;
 }
 
@@ -172,7 +176,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: #ff99ff;
+  background-color: #7689A9;
 }
 
 .main-cards 
@@ -188,7 +192,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #E07AFF;
+  background-color: #7689A9;
   margin-bottom: 20px;
   padding: 24px;
   box-sizing: border-box;
@@ -209,13 +213,133 @@ body {
   height: 265px;
 }
 
+.profile-image
+{
+  border-radius: 50px;
+  overflow: hidden;
+  height: 70px;
+  width: 70px;
+}
+
+.sidenav-profile-picture
+{
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+.sidenav-profile-picture img {
+  width: 100%;
+  height: 100%;
+}
+
+.modal{
+  /* display: none; */
+  position: fixed;
+  z-index:1;
+  height:100%;
+  width: 100%;
+  overflow:auto;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.modal-content
+{
+  background-color: #FFFFFF ;
+  margin: 10% auto;
+  margin-left: 120px;
+  color:  #363377;
+  /* padding-left: 20px; */
+  width: 70%;
+  height: 70%;
+  box-shadow: 0, 5px, 8px, 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
+  animation-name: modal-animation;
+  animation-duration:0.5s
+}
+
+.closeBtn
+{
+  color: #363377;
+  float: right;
+  font-size: 30px;
+}
+
+.closeBtn:hover, .closeBtn:focus{
+  color: #64B058;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+loan-info-table
+{	margin-top: 50PX;
+	margin-left: 150px;
+	border-collapse: collapse;
+	width: 87%;
+}
+
+.loan-info-table, td, th 
+{
+  padding: 15px;
+}
+
+.loan-info-table a 
+{
+  color: #363377;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.loan-info-table a:hover 
+{
+  color: #A52A2A;
+  
+}
+
+tr:nth-child(even) 
+{
+	background-color: #718EA4;
+}
+
+th 
+{
+  text-align: left;
+  color: #FFFFFF;
+  background-color: #496D89;
+}
+
+td 
+{
+  text-align: center;
+}
+
+.user-btn
+{
+  background-color: #496D89;
+	 	border-radius: 4px;
+  	color: #FFFFFF;
+    font-family: 'Trebuchet MS';
+    border: 0px solid;
+    font-size: 14px;
+		cursor: pointer;
+		height: 40px;
+    width:  86px;
+    margin-top: 10px;
+    margin-left: 17px;
+    display: inline-block;
+}
+
+
+@keyframes displaymodal
+{
+  from{opacity:0;}
+  to {opacity: 1;}
+}
 .footer {
   grid-area: footer;
   display: flex;
   align-items: center;
   text-align: center;
   padding: 0 12px;
-  background-color: #9012B3;
+  background-color: #363377;
 }
 
 @media only screen and (min-width: 46.875em) {
